2009-05-17  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (compile-temp-file): Remove backward
	compatibility code.

2009-05-17  Helmut Eller  <heller@common-lisp.net>

	More precise compiler-message location.

	* swank-openmcl.lisp (handle-compiler-warning): Use the
	source-note slot of the condition as source location, which is
	more precise than the stream-position slot.
	(compiler-warning-severity): New function. The distinction between
	warning and style-warning is rather arbitrary but let's try it.
	(swank-compile-file): Pass the external-format arg down to
	compile file.
	(*buffer-name*, *buffer-offset*, condition-source-position):
	Deleted. No longer used.

2009-05-16  Helmut Eller  <heller@common-lisp.net>

	Minor refactoring.

	* swank-openmcl.lisp (call/frame, with-frame): New macro.
	(frame-visible-variables): New helper.
	(frame-var-value, frame-locals, disassemble-frame): Use it.
	(frame-catch-tags): Removed.  Way to much code for such a rarely
	used function.

2009-05-16  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (swank-compile-string): Store the source
	code, by setting CCL:*SAVE-SOURCE-LOCATIONS* to T, for better
	disassembler output.
	(function-source-location): Remove the old pre-1.3 version.

	* swank.lisp (sldb-bitvector-pprint): Oops, all bits are true.

2009-05-16  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-current-parser-state): Do not save
	match-data. This function is called so often that it makes a
	difference.

2009-05-16  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (*sldb-pprint-dispatch-table*): Be careful when
	calling WRITE recursively: set :circle to nil which avoids
	interference with cycle-detection.
	(escape-string): New helper function.
	(*backtrace-pprint-dispatch-table*): Use it.

2009-05-15  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-allegro.lisp (swank-compile-string): Forgot to remove old
	definition in changeset 2009-05-12.

	Patch by Stelian Ionescu.
